kubernetes/test/app-test-flask-service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: app-test-flask-service
    labels:
        env: test
spec:
    type: ClusterIP
    selector:
        app: app-test-flask
    ports:
    - name: app-test-flask
      port: 5000
      targetPort: 5000
