kubernetes/test/app-test-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "test-cardio-app.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: test-nodeport-service
              port:
                  number: 5000
