kubernetes/test/app-test-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport-service
spec:
  type: NodePort
  selector:
    app: app-test-flask
  ports:
  - name: app-test-flask
    port: 5000
    targetPort: 5000
