kubernetes/test/app-test-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: app-test-redis-service
    labels:
        env: test
spec:
    type: ClusterIP
    selector:
        app: app-test-redis
    ports:
    - name: app-test-redis
      port: 6379
      targetPort: 6379
